[1.298] sync - faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -22,6 +22,10 @@ FAQ - Управление системой
 <li><a href="#rc"         >Системные демоны</a>
 <li><a href="#doas"       >Выполнение команд от имени другого пользователя</a>
 <li><a href="#vipw"       >Редактирование файла паролей</a>
+<li><a href="#LostPW"     >Я забыл свой пароль root</a>
+<li><a href="#OpenNTPD"   >Использование OpenNTPD</a>
+<li><a href="#TimeZone"   >Часовые пояса</a>
+<li><a href="#locales"    >Набор символов (character sets) и локализация</a>
 <li><a href="#SKey"       >Использование S/Key</a>
 <li><a href="#Dir"        >Служба каталогов (Directory Services)</a>
 <ul>
@@ -38,24 +42,20 @@ FAQ - Управление системой
 При обнаружении и исправлении критического бага, fix сразу же будет добавлен
 в дерево -current нашего репозитория (fix так же будет доступен во всех
 последующих <a href="faq5.html#Flavors">сборках снапошотов</a>).
-С этого момента, в зависимости от того, где был найден баг - в базовой
-системе OpenBSD или third party пакете, последующие шаги будут отличаться.
-В этом разделе подробно описано, как поддерживать вашу систему в актуальном
-состоянии между релизами.
+Затем он будет перенесен в два последних релиза OpenBSD в виде
+<a href="../errata.html">errata</a>, а подробности будут отправлены в почтовую рассылку
+<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&amp;extra=announce">announce</a>.
 
 <p>
-Security fixes для базовых компонентов OpenBSD обычно добавляются к двум
-последним релизам. Есть четыре варианта:
+Загрузить эти исправления можно разными способами:
 
 <ul>
-  <li><b>Использование бинарных патчей</b> - доступно для amd64, arm64, i386
+  <li><b>Использование бинарных патчей</b> (доступно для amd64, arm64, i386)
     <br>
-    Если вы используете одну из поддерживаемых релизов OpenBSD, вы можете
-    использовать утилиту <a href="https://man.openbsd.org/syspatch">syspatch(8)</a>
-    для обновления файлов, для которых появляются обновления безопасности.
-    Это самый быстрый и простой способ обновления базовых компонентов
-    системы. Советы, касательно процесса обновления, можно найти в рассылке
-    <a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&amp;extra=announce">announce</a>.
+    Утилита <a href="https://man.openbsd.org/syspatch">syspatch(8)</a> может
+    быть использованна для загрузки всех необходимых исправлений, если она
+    запускается на двух последних поддерживаемых OpenBSD релизах.
+    Это самый быстрый и простой способ обновления базовых компонентов системы.
     <p>
   <li><b>Обновление системы до -stable</b>
     <br>
@@ -65,7 +65,7 @@ Security fixes для базовых компонентов OpenBSD обычно
     <p>
   <li><b>Накладывание патчей на уязвимые файлы</b>
     <br>
-    Хотя накладывание патчей с <a href="../errata.html">errata страницы</a>
+    Хотя накладывание патчей со страницы errata
     обычно требует меньшего времени, чем CVS checkout/update и последующий
     процесс пересборки, универсальной последовательности действий нет.
     Иногда вы должны исправить и перекомпилировать лишь одну программу,
@@ -79,12 +79,12 @@ Security fixes для базовых компонентов OpenBSD обычно
     Тем не менее, помните, что использование -current подойдет не всем.
 </ul>
 
-Для third party ПО, установленного при помощи <a href="faq15.html">пакетов</a>,
-исправления обычно затрагивают лишь последнюю версию.
-Тут есть три варианта:
+Securtiy исправления для для third party ПО, установленного при помощи
+<a href="faq15.html">пакетов</a>, затрагивают лишь последнюю версию.
+Тут есть несколько вариантов:
 
 <ul>
-  <li><b>Использование бинарных пакетов</b> - доступно для amd64, arm64, i386, sparc64
+  <li><b>Использование бинарных пакетов</b> (доступно для amd64, arm64, i386, sparc64)
     <br>
     Бинарные пакеты для -stable пересобираются только в случае найденных проблем
     безопасности или необходимости использования других серьезных исправлений.
@@ -98,14 +98,17 @@ Security fixes для базовых компонентов OpenBSD обычно
     чтобы получить список всех пакетов, нуждающихся в пересборке, и выполните
     команду <code>make update</code> в каталоге соответствующего порта.
     В некоторых случаях перед пересборкой необходимо удалить существующие порты.
-    Чтобы получать уведомления об обновлениях портов, подпишитесь на рассылку
-    <a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&amp;extra=ports-changes">ports-changes</a>.
     <p>
   <li><b>Обновление системы до -current</b>
     <br>
     Бинарные пакеты для -current пересобираются постоянно (on a regular basis),
     и эти новые пакеты включают все исправления безопасности.
 </ul>
+
+Чтобы получать уведомления об обновлениях портов, подпишитесь на рассылку
+<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&a
++mp;extra=ports-changes">ports-changes</a>.
+
 
 <h2 id="rc">Системные демоны (System Daemons)</h2>
 
@@ -182,6 +185,174 @@ $ <b>doas -u root crontab -l</b>
 После того, как вы закончите редактирование, он сначала проверит изменения,
 затем создаст <code>/etc/passwd</code> и базы паролей и, наконец,
 установит копию вместо исходного файла <code>/etc/master.passwd</code>.
+
+<h2 id="LostPW">Я забыл свой пароль root</h2>
+
+Процесс восстановления пароля включает следующие шаги: загрузку в
+однопользовательском режиме, монтирование разделов <code>/</code> и
+<code>/usr</code>, выполнение команды
+<a href="https://man.openbsd.org/passwd">passwd(1)</a> для смены
+пароля root:
+
+<ul>
+  <li><b>Загрузка в однопользовательском режиме.</b>
+    Эта часть процесса различается для разных
+    <a href="../plat.html">платформ</a>.
+    Для amd64 и i386, на
+    <a href="faq14.html#BootAmd64">на втором этапе загрузки</a>
+    есть пауза для введения параметров ядра.
+    В примере ниже видно как мы передали <code>-s</code> флаг для
+    <a href="https://man.openbsd.org/OpenBSD-current/i386/boot">boot(8)</a>:
+
+<pre class="cmdbox">
+probing: pc0 com0 com1 mem[638K 1918M a20=on]
+disk: hd0+ hd1+
+>> OpenBSD/amd64 BOOT 3.33
+boot> <b>boot -s</b>
+</pre>
+
+  <li><b>Монтирование разделов.</b>
+    Оба раздела <code>/</code> и <code>/usr</code> должны быть подмонтированны
+    в режиме чтения и записи.
+
+<pre class="cmdbox">
+# <b>fsck -p / &amp;&amp; mount -uw /</b>
+# <b>fsck -p /usr &amp;&amp; mount /usr</b>
+</pre>
+
+  <li><b>Запустите <a href="https://man.openbsd.org/passwd">passwd(1)</a>
+    для смены пароля root.</b>
+    Поскольку вы загрузились в однопользовательском режиме, у вас уже есть
+    права root, поэтому пароль вводить не портебуется.
+
+  <li><b>Загрузка в многопользовательском режиме.</b>
+    Это можно сделав нажав "CTRL-D" для перехода в нормальный режим загрузки,
+    или выполнив команду
+    <a href="https://man.openbsd.org/reboot">reboot(8)</a>.
+</ul>
+
+<h2 id="OpenNTPD">Использование OpenNTPD</h2>
+
+<a href="https://openbsd-ru.github.io/openntpd/index.html">OpenNTPD</a>
+это надежный и простой NTP-совместимый способ иметь точное время в системе.
+<a href="https://man.openbsd.org/ntpd">ntpd(8)</a> демон включается по умолчанию
+во время установки.
+Во время загрузки <code>ntpd</code> постарается установить дату и время,
+используемое в системе, в зависимости от данных, которые он получит от
+NTP-узлов, найденных при помощи
+<a href="https://man.openbsd.org/ntpd.conf#CONSTRAINTS">constraints</a>
+по https.
+
+Как только часы будут точно настроенны, <code>ntpd</code> будет следить
+за тем, чтобы они не убежали, используя сервера, указанные в
+<a href="https://man.openbsd.org/ntpd.conf">ntpd.conf(5)</a>.
+Во время загрузки, <code>ntpd</code> корректирует настройки часов только
+в том случае, если они отстали (подгоняет их вперед). Если же ваши часы
+спешат, т.е. время на них нужно переместить назад, установите часы вручную,
+используя <a href="https://man.openbsd.org/date">date(1)</a>..
+
+<p>
+Для использования OpenNTPD в качестве сервера, добавьте строку
+<code>listen on *</code> в ваш
+<a href="https://man.openbsd.org/ntpd.conf">ntpd.conf(5)</a> файл и
+перезапустите демон.
+Можно настроить его и так, чтобы он работал только со специально указанным
+адресом или интерфейсом.
+
+<p>
+После того как вы запустите <a href="https://man.openbsd.org/ntpd">ntpd(8)</a>
+в качестве сервера, другие машины, возможно, не смогут синхронизировать
+настройки времени сразу же. Это связано с тем, что информация о времени не
+будет предоставляться сервером до тех пор, пока не будет достигнут достаточный
+уровень стабильности. Как только этот уровень будет досигнут, в
+<code>/var/log/daemon</code> появится сообщение "clock now synced".
+
+<h2 id="TimeZone">Часовые пояса</h2>
+
+OpenBSD предполагает, что ваши аппаратные часы настроены в соответствии с UTC
+(Universal Coordinated Time), а не по местному времени. Это может причиной проблем при
+<a href="faq4.html#Multibooting">мультизагрузке</a>.
+Большинство других операционных систем могут быть настроены по тому же принципу,
+что и OpenBSD, чтобы избежать эту проблему.
+
+<p>
+Если испрользование UTC является причиной проблем, вы всегда можете изменить
+настройки, в
+<a href="https://man.openbsd.org/sysctl.conf">sysctl.conf(5)</a>.
+Например, добавьте следюущие строки в <code>/etc/sysctl.conf</code> чтобы
+сконфигурировать OpenBSD для использования аппаратные часов
+установленных на US/Eastern (5 часов или 300 минут от UTC):
+
+<pre class="cmdbox">
+kern.utc_offset=-300
+</pre>
+
+Ознакомьтесь с параметром "kern.utc_offset" в руководстве
+<a href="https://man.openbsd.org/sysctl.2#KERN_UTC_OFFSET~2">sysctl(2)</a>.
+
+<p>
+Обратите внимание, что аппаратные часы (hardware clock) должны работать
+с вышеуказанной конфигурацией и требуемым смещением перед загрузкой OpenBSD,
+иначе при загрузке будет неправильно настроено системное время.
+
+<p>
+Обычно часовой пояс настраивается во время установки.
+Если вам нужно изменить часовой пояс, вы можете создать новый symbolic link
+на подходящий файл часового пояса в <code>/usr/share/zoneinfo</code>.
+Например, чтобы настроить машину для использования EST5EDT в качестве
+нового локального часового пояса:
+
+<pre class="cmdbox">
+# <b>ln -fs /usr/share/zoneinfo/EST5EDT /etc/localtime</b>
+</pre>
+
+Смотрите также руководство по <a href="https://man.openbsd.org/date">date(1)</a>.
+
+<h2 id="locales">Набор символов (character sets) и локализация</h2>
+
+Базовая система OpenBSD полностью поддерживает набор символов и кодировку
+ASCII, а таже частично кодировку UTF-8 набора символов Unicode. Никакие другие
+кодировки или наборы символов не поддерживаются базовой системой, но порты
+могут использоваться для их обработки. Уровень поддержки UTF-8 и конфигурация
+кодировки по умолчанию сильно различаются в зависимости от используемой
+программы или библиотеки.
+
+<p>
+Чтобы использовать UTF-8 везде, где это поддерживается, установите значение
+<code>en_US.UTF-8</code> для переменной среды <code>LC_CTYPE</code>:
+
+<ul>
+  <li>
+    Если вы используете <a href="https://man.openbsd.org/xenodm">xenodm(1)</a>
+    для входа в систему, добавьте <code>export LC_CTYPE="en_US.UTF-8"</code>
+    в <code>~/.xsession</code> до запуска оконного менеджера.
+    Обратите внимание на главу <a href="faq11.html#CustomizingX">настройка X</a>,
+    если вы ищете более подробную информацию по этой теме.
+  <li>
+    Если вы входите в систему через консоль, добавьте
+    <code>export LC_CTYPE="en_US.UTF-8"</code> в ваш <code>~/.profile</code>.
+    Поддержка UTF-8 в консоли находится в стадии разработки, и некоторые символы,
+    не входящие в ASCII, могут отображаться некорректно.
+</ul>
+
+При подключении к удаленным системам через
+<a href="https://man.openbsd.org/ssh">ssh(1)</a> значение переменной
+<code>LC_CTYPE</code> не будет переданно, поэтому перед подключением убедитесь,
+что на локальном терминале установлена кодировка символов, используемая на удаленном
+сервере.
+Если эта кодировка неизвестна или не поддерживается OpenBSD, убедитесь, что вы
+используете дефолтную конфигурацию
+<a href="https://man.openbsd.org/xterm">xterm(1)</a>, а после подключения
+настройте консоль (remote shell) при помощи <code>LC_CTYPE=en_US.UTF-8</code>.
+
+<p>
+Базовая система OpenBSD полностью игнорирует все переменные окружения,
+связанные с локалью, кроме <code>LC_CTYPE</code>. Даже <code>LC_ALL</code>
+и <code>LANG</code> влияют только на кодировку символов. Некоторые порты могут
+учитывать другие <code>LC_*</code> переменные, но использовать их или
+устанавливать для <code>LC_CTYPE</code> любое другое значение, отличное от
+<code>C</code>, <code>POSIX</code> или <code>en_US.UTF-8</code>, не рекомендуется.
+
 
 <h2 id="SKey">Использование S/Key</h2>
 
