--- a/openssh/index.html
+++ b/openssh/index.html
@@ -50,8 +50,8 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.0">OpenSSH 9.0</a>
-состоялся 8 апреля 2022 года.<br>
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.1">OpenSSH 9.1</a>
+состоялся 4 октября 2022 года.<br>
 
 <p>
 OpenSSH это основной инструмент для создания соединений
