[1.468] OpenBGPD 7.7 - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 7.6 состоялся 15 сентября 2022 года.
+Релиз портированной версии OpenBGPD 7.7 состоялся 6 октября 2022 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
