--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<li><a href="https://www.openbsd.org/plus.html">Changelog</a>
 	<li><a href="faq/index.html">FAQ</a>
 	<li><a href="https://man.openbsd.org">Man-страницы</a>
-	<li><a href="https://www.openbsd.org/errata71.html">Патчи</a>
+	<li><a href="https://www.openbsd.org/errata72.html">Патчи</a>
 	<li><a href="report.html">Сообщить об ошибке</a>
 	<li><a href="mail.html">Почтовые рассылки</a>
 	<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -67,8 +67,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/71.html">
-	<img src="images/puffy71.gif" height=198 width=599 alt="[OpenBSD 7.1]">
+	<a href="https://www.openbsd.org/72.html">
+	<img src="images/puffy72.gif" height=198 width=599 alt="[OpenBSD 7.2]">
 	</a>
 </h2>
 
@@ -94,9 +94,8 @@ OpenBSD доступна для скачивания с нашей
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/71.html">OpenBSD 7.1</a>,
-вышла 21 апреля 2022 года.
-Это 52'й релиз.
+<a href="https://www.openbsd.org/72.html">OpenBSD 7.2</a>,
+вышла 20 октябтя 2022 года. Это 53'й релиз.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
