[1.61] update to 7.2 - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -97,9 +97,9 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Pine64 Pine 64/64+
         <li><a href="https://www.pine64.org/pine-h64-ver-b/">Pine64 H64</a>
 		<li><a href="https://www.pine64.org/pinebook/">Pine64 Pinebook</a>
-		<li><a href="https://wiki.friendlyarm.com/wiki/index.php/NanoPi_A64">NanoPi A64</a>
-		<li><a href="http://www.orangepi.org/orangepipc2/">Orange Pi PC2</a>
-		<li><a href="http://www.orangepi.org/OrangePiZeroPlus/">Orange Pi Zero Plus</a>
+		<li><a href="https://wiki.friendlyelec.com/wiki/index.php/NanoPi_A64">NanoPi A64</a>
+		<li><a href="http://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-PC-2.html">Orange Pi PC2</a>
+		<li><a href="http://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-Zero-Plus.html">Orange Pi Zero Plus</a>
 	</ul>
 	<li>AMD Opteron A1100 (Seattle)
 	<ul>
@@ -164,7 +164,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li><a href="https://www.pine64.org/rockpro64/">Pine64 ROCKPro64</a>
 		<li><a href="https://www.pine64.org/pinebook-pro/">Pinebook Pro</a>
 		<li><a href="https://en.t-firefly.com/product/rk3399.html">Firefly-RK3399</a>
-		<li><a href="http://wiki.friendlyarm.com/wiki/index.php/NanoPC-T4">FriendlyElec NanoPC-T4</a>
+		<li><a href="https://wiki.friendlyarm.com/wiki/index.php/NanoPC-T4">FriendlyElec NanoPC-T4</a>
 		<li><a href="https://www.theobroma-systems.com/som-product/rk3399-q7/">Theobroma Systems RK3399-Q7</a>
 		<li><a href="https://wiki.radxa.com/RockpiN10">Radxa Rock Pi N10</a>
 	</ul>
@@ -184,11 +184,6 @@ OpenBSD на этих машинах.
 <p>
 Не забывайте, что Raspberry Pi 3 модели B+ отличается от первоночальной Raspberry Pi 3;
 некоторые важные компоненты (devices) на B+ <b>НЕ</b> поддеживаются.
-
-<p>
-Поддержка систем Ampere Altra, Apple M2 и Qualcomm SC8280XP была добавлена уже
-после релиза OpenBSD 7.1. Для этих систем понадобится последний snapshot, пока
-не будет доступна OpenBSD 7.2.
 
 <h4>Ethernet</h4>
 <ul>
@@ -252,9 +247,9 @@ time clock с питанием от батарейки, тем не менее, 
 
 <p>
 Последнeй поддерживаемой версией OpenBSD/arm64 является
-<a href="https://www.openbsd.org/71.html">OpenBSD 7.1</a>.
+<a href="https://www.openbsd.org/72.html">OpenBSD 7.2</a>.
 Здесь вы можете найти
-<a href="https://ftp.openbsd.org/pub/OpenBSD/7.1/arm64/INSTALL.arm64">
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/arm64/INSTALL.arm64">
 инструкции по установке OpenBSD/arm64</a>.
 
 <p>
