--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -131,6 +131,7 @@ OpenBSD работает на следующих <a href="../plat.html">плат
   <li><a href="https://www.openbsd.org/hppa.html"     >hppa</a>
   <li><a href="https://www.openbsd.org/i386.html"     >i386</a>
   <li><a href="https://www.openbsd.org/landisk.html"  >landisk</a>
+  <li><a href="https://www.openbsd.org/loongson.html" >loongson</a>
   <li><a href="https://www.openbsd.org/luna88k.html"  >luna88k</a>
   <li><a href="https://www.openbsd.org/macppc.html"   >macppc</a>
   <li><a href="https://www.openbsd.org/octeon.html"   >octeon</a>
@@ -191,7 +192,7 @@ OpenBSD поставляется с обширной документацией 
 
 Полный набор man-страниц OpenBSD можно читать online на
 <a href="https://man.openbsd.org">man.openbsd.org</a>,
-а также их можно найти в архиве <code>man71.tgz</code>.
+а также их можно найти в архиве <code>man72.tgz</code>.
 
 <p>
 В общем, если вы знаете имя команды или страницы руководства, вы можете
