[1.860] update to 7.2 - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -44,7 +44,7 @@
 	доступна коллекция FTP OpenBSD. Это может быть ссылкой, если
 	это необходимо.
 	<p>
-<li><b>/pub/OpenBSD/7.1/</b><br>
+<li><b>/pub/OpenBSD/7.2/</b><br>
 	Где можно найти последний релиз.
   <ul>
   <!-- XXXrelease - make sure platform list is current -->
@@ -55,6 +55,7 @@
   <li><b>hppa/</b>
   <li><b>i386/</b>
   <li><b>landisk/</b>
+  <li><b>loongson/</b>
   <li><b>luna88k/</b>
   <li><b>macppc/</b>
   <li><b>octeon/</b>
@@ -82,8 +83,8 @@
 <li><b>/pub/OpenBSD/tools/</b><br>
 	Другое различные маленькие вещи.
 <p>
-<li><b>/pub/OpenBSD/7.0/</b><br>
-	Такая же структура каталогов как и для релиза 7.1, описанного выше.
+<li><b>/pub/OpenBSD/7.1/</b><br>
+	Такая же структура каталогов как и для релиза 7.2, описанного выше.
 </ul>
 
 <h3 id="prospective">Информация для планируемых/поддерживаемых Зеркал</h3>
