[1.11] sync, OpenIKED 7.2 - openiked/index.html

--- a/openiked/index.html
+++ b/openiked/index.html
@@ -37,8 +37,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.1-relnotes.txt">OpenIKED 7.1</a>
-вышла 23 мая 2022 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.2-relnotes.txt">OpenIKED 7.2</a>
+вышла 1 декабря 2022 года
 
 <p>
 OpenIKED это <strong>СВОБОДНАЯ</strong> реализация протокола обмена ключами (IKEv2),
