--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.0 вышла 11 сентября 2022 года.
+Портированная версия rpki-client 8.2 вышла 13 декабря 2022 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -42,7 +42,7 @@ rpki-client работат на всех операционных система
 
 <ul>
 	<li>OpenBSD
-    <li>FreeBSD
+	<li>FreeBSD
 	<li>Linux
 	<li>macOS
 	<li>Windows Subsystem for Linux 2
