[1.32] sync, rpki-client 8.2 - rpki-client/index.html

--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -38,9 +38,8 @@
 </h2>
 
 <p id="callout">
-
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.0.txt">
-rpki-client 8.0</a> вышел 11 сентября 2022 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.2.txt">
+rpki-client 8.2</a> вышел 13 декабря 2022 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
