[1.167] sync, author for h2k22 - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -962,3 +962,4 @@ t2k17 создана Christopher Roberts.<br>
 n2k18 создана Jojin&amp;HedgeHog.<br>
 u2k20 создана Pamela Mosiejczuk.<br>
 k2k21, h2k21 создана Natasha Allegri.<br>
+h2k22 Pedro Almeida.<br>
