[1.299] sync - faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -265,7 +265,7 @@ NTP-узлов, найденных при помощи
 настройки времени сразу же. Это связано с тем, что информация о времени не
 будет предоставляться сервером до тех пор, пока не будет достигнут достаточный
 уровень стабильности. Как только этот уровень будет досигнут, в
-<code>/var/log/daemon</code> появится сообщение "clock now synced".
+<code>/var/log/daemon</code> появится сообщение "clock is now synced".
 
 <h2 id="TimeZone">Часовые пояса</h2>
 
